Remove unused configuration options Disable broken tests Fix some tests Turn off python e2e tests for schema evo and iceberg Remove google format check Cleaned up python tests from unused parameters More removed unused methods from java Removed ssv1 configuration references Removed ssv1 and net.snowflake.ingest.streaming.SnowflakeStreamingIngestClient; references Removed references to snowpipe method and tools